// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GenerateComponentDescriptorCpp can generate fixture ARRAY_PROPS 1`] = `
Map {
  "ComponentDescriptors.cpp" => "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateComponentDescriptorCpp.js
 */

#include <react/renderer/components/ARRAY_PROPS/ComponentDescriptors.h>
#include <react/renderer/core/ConcreteComponentDescriptor.h>
#include <react/renderer/componentregistry/ComponentDescriptorProviderRegistry.h>

namespace facebook::react {

void ARRAY_PROPS_registerComponentDescriptorsFromCodegen(
  std::shared_ptr<const ComponentDescriptorProviderRegistry> registry) {
registry->add(concreteComponentDescriptorProvider<ArrayPropsNativeComponentComponentDescriptor>());
}

} // namespace facebook::react
",
}
`;

exports[`GenerateComponentDescriptorCpp can generate fixture ARRAY_PROPS_WITH_NESTED_OBJECT 1`] = `
Map {
  "ComponentDescriptors.cpp" => "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateComponentDescriptorCpp.js
 */

#include <react/renderer/components/ARRAY_PROPS_WITH_NESTED_OBJECT/ComponentDescriptors.h>
#include <react/renderer/core/ConcreteComponentDescriptor.h>
#include <react/renderer/componentregistry/ComponentDescriptorProviderRegistry.h>

namespace facebook::react {

void ARRAY_PROPS_WITH_NESTED_OBJECT_registerComponentDescriptorsFromCodegen(
  std::shared_ptr<const ComponentDescriptorProviderRegistry> registry) {
registry->add(concreteComponentDescriptorProvider<ArrayPropsNativeComponentComponentDescriptor>());
}

} // namespace facebook::react
",
}
`;

exports[`GenerateComponentDescriptorCpp can generate fixture BOOLEAN_PROP 1`] = `
Map {
  "ComponentDescriptors.cpp" => "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateComponentDescriptorCpp.js
 */

#include <react/renderer/components/BOOLEAN_PROP/ComponentDescriptors.h>
#include <react/renderer/core/ConcreteComponentDescriptor.h>
#include <react/renderer/componentregistry/ComponentDescriptorProviderRegistry.h>

namespace facebook::react {

void BOOLEAN_PROP_registerComponentDescriptorsFromCodegen(
  std::shared_ptr<const ComponentDescriptorProviderRegistry> registry) {
registry->add(concreteComponentDescriptorProvider<BooleanPropNativeComponentComponentDescriptor>());
}

} // namespace facebook::react
",
}
`;

exports[`GenerateComponentDescriptorCpp can generate fixture COLOR_PROP 1`] = `
Map {
  "ComponentDescriptors.cpp" => "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateComponentDescriptorCpp.js
 */

#include <react/renderer/components/COLOR_PROP/ComponentDescriptors.h>
#include <react/renderer/core/ConcreteComponentDescriptor.h>
#include <react/renderer/componentregistry/ComponentDescriptorProviderRegistry.h>

namespace facebook::react {

void COLOR_PROP_registerComponentDescriptorsFromCodegen(
  std::shared_ptr<const ComponentDescriptorProviderRegistry> registry) {
registry->add(concreteComponentDescriptorProvider<ColorPropNativeComponentComponentDescriptor>());
}

} // namespace facebook::react
",
}
`;

exports[`GenerateComponentDescriptorCpp can generate fixture COMMANDS 1`] = `
Map {
  "ComponentDescriptors.cpp" => "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateComponentDescriptorCpp.js
 */

#include <react/renderer/components/COMMANDS/ComponentDescriptors.h>
#include <react/renderer/core/ConcreteComponentDescriptor.h>
#include <react/renderer/componentregistry/ComponentDescriptorProviderRegistry.h>

namespace facebook::react {

void COMMANDS_registerComponentDescriptorsFromCodegen(
  std::shared_ptr<const ComponentDescriptorProviderRegistry> registry) {
registry->add(concreteComponentDescriptorProvider<CommandNativeComponentComponentDescriptor>());
}

} // namespace facebook::react
",
}
`;

exports[`GenerateComponentDescriptorCpp can generate fixture COMMANDS_AND_PROPS 1`] = `
Map {
  "ComponentDescriptors.cpp" => "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateComponentDescriptorCpp.js
 */

#include <react/renderer/components/COMMANDS_AND_PROPS/ComponentDescriptors.h>
#include <react/renderer/core/ConcreteComponentDescriptor.h>
#include <react/renderer/componentregistry/ComponentDescriptorProviderRegistry.h>

namespace facebook::react {

void COMMANDS_AND_PROPS_registerComponentDescriptorsFromCodegen(
  std::shared_ptr<const ComponentDescriptorProviderRegistry> registry) {
registry->add(concreteComponentDescriptorProvider<CommandNativeComponentComponentDescriptor>());
}

} // namespace facebook::react
",
}
`;

exports[`GenerateComponentDescriptorCpp can generate fixture DIMENSION_PROP 1`] = `
Map {
  "ComponentDescriptors.cpp" => "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateComponentDescriptorCpp.js
 */

#include <react/renderer/components/DIMENSION_PROP/ComponentDescriptors.h>
#include <react/renderer/core/ConcreteComponentDescriptor.h>
#include <react/renderer/componentregistry/ComponentDescriptorProviderRegistry.h>

namespace facebook::react {

void DIMENSION_PROP_registerComponentDescriptorsFromCodegen(
  std::shared_ptr<const ComponentDescriptorProviderRegistry> registry) {
registry->add(concreteComponentDescriptorProvider<DimensionPropNativeComponentComponentDescriptor>());
}

} // namespace facebook::react
",
}
`;

exports[`GenerateComponentDescriptorCpp can generate fixture DOUBLE_PROPS 1`] = `
Map {
  "ComponentDescriptors.cpp" => "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateComponentDescriptorCpp.js
 */

#include <react/renderer/components/DOUBLE_PROPS/ComponentDescriptors.h>
#include <react/renderer/core/ConcreteComponentDescriptor.h>
#include <react/renderer/componentregistry/ComponentDescriptorProviderRegistry.h>

namespace facebook::react {

void DOUBLE_PROPS_registerComponentDescriptorsFromCodegen(
  std::shared_ptr<const ComponentDescriptorProviderRegistry> registry) {
registry->add(concreteComponentDescriptorProvider<DoublePropNativeComponentComponentDescriptor>());
}

} // namespace facebook::react
",
}
`;

exports[`GenerateComponentDescriptorCpp can generate fixture EVENT_NESTED_OBJECT_PROPS 1`] = `
Map {
  "ComponentDescriptors.cpp" => "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateComponentDescriptorCpp.js
 */

#include <react/renderer/components/EVENT_NESTED_OBJECT_PROPS/ComponentDescriptors.h>
#include <react/renderer/core/ConcreteComponentDescriptor.h>
#include <react/renderer/componentregistry/ComponentDescriptorProviderRegistry.h>

namespace facebook::react {

void EVENT_NESTED_OBJECT_PROPS_registerComponentDescriptorsFromCodegen(
  std::shared_ptr<const ComponentDescriptorProviderRegistry> registry) {
registry->add(concreteComponentDescriptorProvider<EventsNestedObjectNativeComponentComponentDescriptor>());
}

} // namespace facebook::react
",
}
`;

exports[`GenerateComponentDescriptorCpp can generate fixture EVENT_PROPS 1`] = `
Map {
  "ComponentDescriptors.cpp" => "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateComponentDescriptorCpp.js
 */

#include <react/renderer/components/EVENT_PROPS/ComponentDescriptors.h>
#include <react/renderer/core/ConcreteComponentDescriptor.h>
#include <react/renderer/componentregistry/ComponentDescriptorProviderRegistry.h>

namespace facebook::react {

void EVENT_PROPS_registerComponentDescriptorsFromCodegen(
  std::shared_ptr<const ComponentDescriptorProviderRegistry> registry) {
registry->add(concreteComponentDescriptorProvider<EventsNativeComponentComponentDescriptor>());
}

} // namespace facebook::react
",
}
`;

exports[`GenerateComponentDescriptorCpp can generate fixture EVENTS_WITH_PAPER_NAME 1`] = `
Map {
  "ComponentDescriptors.cpp" => "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateComponentDescriptorCpp.js
 */

#include <react/renderer/components/EVENTS_WITH_PAPER_NAME/ComponentDescriptors.h>
#include <react/renderer/core/ConcreteComponentDescriptor.h>
#include <react/renderer/componentregistry/ComponentDescriptorProviderRegistry.h>

namespace facebook::react {

void EVENTS_WITH_PAPER_NAME_registerComponentDescriptorsFromCodegen(
  std::shared_ptr<const ComponentDescriptorProviderRegistry> registry) {

}

} // namespace facebook::react
",
}
`;

exports[`GenerateComponentDescriptorCpp can generate fixture EXCLUDE_ANDROID 1`] = `
Map {
  "ComponentDescriptors.cpp" => "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateComponentDescriptorCpp.js
 */

#include <react/renderer/components/EXCLUDE_ANDROID/ComponentDescriptors.h>
#include <react/renderer/core/ConcreteComponentDescriptor.h>
#include <react/renderer/componentregistry/ComponentDescriptorProviderRegistry.h>

namespace facebook::react {

void EXCLUDE_ANDROID_registerComponentDescriptorsFromCodegen(
  std::shared_ptr<const ComponentDescriptorProviderRegistry> registry) {
registry->add(concreteComponentDescriptorProvider<ExcludedAndroidComponentComponentDescriptor>());
}

} // namespace facebook::react
",
}
`;

exports[`GenerateComponentDescriptorCpp can generate fixture EXCLUDE_ANDROID_IOS 1`] = `
Map {
  "ComponentDescriptors.cpp" => "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateComponentDescriptorCpp.js
 */

#include <react/renderer/components/EXCLUDE_ANDROID_IOS/ComponentDescriptors.h>
#include <react/renderer/core/ConcreteComponentDescriptor.h>
#include <react/renderer/componentregistry/ComponentDescriptorProviderRegistry.h>

namespace facebook::react {

void EXCLUDE_ANDROID_IOS_registerComponentDescriptorsFromCodegen(
  std::shared_ptr<const ComponentDescriptorProviderRegistry> registry) {
registry->add(concreteComponentDescriptorProvider<ExcludedAndroidIosComponentComponentDescriptor>());
}

} // namespace facebook::react
",
}
`;

exports[`GenerateComponentDescriptorCpp can generate fixture EXCLUDE_IOS_TWO_COMPONENTS_DIFFERENT_FILES 1`] = `
Map {
  "ComponentDescriptors.cpp" => "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateComponentDescriptorCpp.js
 */

#include <react/renderer/components/EXCLUDE_IOS_TWO_COMPONENTS_DIFFERENT_FILES/ComponentDescriptors.h>
#include <react/renderer/core/ConcreteComponentDescriptor.h>
#include <react/renderer/componentregistry/ComponentDescriptorProviderRegistry.h>

namespace facebook::react {

void EXCLUDE_IOS_TWO_COMPONENTS_DIFFERENT_FILES_registerComponentDescriptorsFromCodegen(
  std::shared_ptr<const ComponentDescriptorProviderRegistry> registry) {
registry->add(concreteComponentDescriptorProvider<ExcludedIosComponentComponentDescriptor>());
registry->add(concreteComponentDescriptorProvider<MultiFileIncludedNativeComponentComponentDescriptor>());
}

} // namespace facebook::react
",
}
`;

exports[`GenerateComponentDescriptorCpp can generate fixture FLOAT_PROPS 1`] = `
Map {
  "ComponentDescriptors.cpp" => "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateComponentDescriptorCpp.js
 */

#include <react/renderer/components/FLOAT_PROPS/ComponentDescriptors.h>
#include <react/renderer/core/ConcreteComponentDescriptor.h>
#include <react/renderer/componentregistry/ComponentDescriptorProviderRegistry.h>

namespace facebook::react {

void FLOAT_PROPS_registerComponentDescriptorsFromCodegen(
  std::shared_ptr<const ComponentDescriptorProviderRegistry> registry) {
registry->add(concreteComponentDescriptorProvider<FloatPropNativeComponentComponentDescriptor>());
}

} // namespace facebook::react
",
}
`;

exports[`GenerateComponentDescriptorCpp can generate fixture IMAGE_PROP 1`] = `
Map {
  "ComponentDescriptors.cpp" => "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateComponentDescriptorCpp.js
 */

#include <react/renderer/components/IMAGE_PROP/ComponentDescriptors.h>
#include <react/renderer/core/ConcreteComponentDescriptor.h>
#include <react/renderer/componentregistry/ComponentDescriptorProviderRegistry.h>

namespace facebook::react {

void IMAGE_PROP_registerComponentDescriptorsFromCodegen(
  std::shared_ptr<const ComponentDescriptorProviderRegistry> registry) {
registry->add(concreteComponentDescriptorProvider<ImagePropNativeComponentComponentDescriptor>());
}

} // namespace facebook::react
",
}
`;

exports[`GenerateComponentDescriptorCpp can generate fixture INSETS_PROP 1`] = `
Map {
  "ComponentDescriptors.cpp" => "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateComponentDescriptorCpp.js
 */

#include <react/renderer/components/INSETS_PROP/ComponentDescriptors.h>
#include <react/renderer/core/ConcreteComponentDescriptor.h>
#include <react/renderer/componentregistry/ComponentDescriptorProviderRegistry.h>

namespace facebook::react {

void INSETS_PROP_registerComponentDescriptorsFromCodegen(
  std::shared_ptr<const ComponentDescriptorProviderRegistry> registry) {
registry->add(concreteComponentDescriptorProvider<InsetsPropNativeComponentComponentDescriptor>());
}

} // namespace facebook::react
",
}
`;

exports[`GenerateComponentDescriptorCpp can generate fixture INT32_ENUM_PROP 1`] = `
Map {
  "ComponentDescriptors.cpp" => "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateComponentDescriptorCpp.js
 */

#include <react/renderer/components/INT32_ENUM_PROP/ComponentDescriptors.h>
#include <react/renderer/core/ConcreteComponentDescriptor.h>
#include <react/renderer/componentregistry/ComponentDescriptorProviderRegistry.h>

namespace facebook::react {

void INT32_ENUM_PROP_registerComponentDescriptorsFromCodegen(
  std::shared_ptr<const ComponentDescriptorProviderRegistry> registry) {
registry->add(concreteComponentDescriptorProvider<Int32EnumPropsNativeComponentComponentDescriptor>());
}

} // namespace facebook::react
",
}
`;

exports[`GenerateComponentDescriptorCpp can generate fixture INTEGER_PROPS 1`] = `
Map {
  "ComponentDescriptors.cpp" => "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateComponentDescriptorCpp.js
 */

#include <react/renderer/components/INTEGER_PROPS/ComponentDescriptors.h>
#include <react/renderer/core/ConcreteComponentDescriptor.h>
#include <react/renderer/componentregistry/ComponentDescriptorProviderRegistry.h>

namespace facebook::react {

void INTEGER_PROPS_registerComponentDescriptorsFromCodegen(
  std::shared_ptr<const ComponentDescriptorProviderRegistry> registry) {
registry->add(concreteComponentDescriptorProvider<IntegerPropNativeComponentComponentDescriptor>());
}

} // namespace facebook::react
",
}
`;

exports[`GenerateComponentDescriptorCpp can generate fixture INTERFACE_ONLY 1`] = `
Map {
  "ComponentDescriptors.cpp" => "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateComponentDescriptorCpp.js
 */

#include <react/renderer/components/INTERFACE_ONLY/ComponentDescriptors.h>
#include <react/renderer/core/ConcreteComponentDescriptor.h>
#include <react/renderer/componentregistry/ComponentDescriptorProviderRegistry.h>

namespace facebook::react {

void INTERFACE_ONLY_registerComponentDescriptorsFromCodegen(
  std::shared_ptr<const ComponentDescriptorProviderRegistry> registry) {

}

} // namespace facebook::react
",
}
`;

exports[`GenerateComponentDescriptorCpp can generate fixture MIXED_PROP 1`] = `
Map {
  "ComponentDescriptors.cpp" => "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateComponentDescriptorCpp.js
 */

#include <react/renderer/components/MIXED_PROP/ComponentDescriptors.h>
#include <react/renderer/core/ConcreteComponentDescriptor.h>
#include <react/renderer/componentregistry/ComponentDescriptorProviderRegistry.h>

namespace facebook::react {

void MIXED_PROP_registerComponentDescriptorsFromCodegen(
  std::shared_ptr<const ComponentDescriptorProviderRegistry> registry) {
registry->add(concreteComponentDescriptorProvider<MixedPropNativeComponentComponentDescriptor>());
}

} // namespace facebook::react
",
}
`;

exports[`GenerateComponentDescriptorCpp can generate fixture MULTI_NATIVE_PROP 1`] = `
Map {
  "ComponentDescriptors.cpp" => "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateComponentDescriptorCpp.js
 */

#include <react/renderer/components/MULTI_NATIVE_PROP/ComponentDescriptors.h>
#include <react/renderer/core/ConcreteComponentDescriptor.h>
#include <react/renderer/componentregistry/ComponentDescriptorProviderRegistry.h>

namespace facebook::react {

void MULTI_NATIVE_PROP_registerComponentDescriptorsFromCodegen(
  std::shared_ptr<const ComponentDescriptorProviderRegistry> registry) {
registry->add(concreteComponentDescriptorProvider<ImageColorPropNativeComponentComponentDescriptor>());
}

} // namespace facebook::react
",
}
`;

exports[`GenerateComponentDescriptorCpp can generate fixture NO_PROPS_NO_EVENTS 1`] = `
Map {
  "ComponentDescriptors.cpp" => "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateComponentDescriptorCpp.js
 */

#include <react/renderer/components/NO_PROPS_NO_EVENTS/ComponentDescriptors.h>
#include <react/renderer/core/ConcreteComponentDescriptor.h>
#include <react/renderer/componentregistry/ComponentDescriptorProviderRegistry.h>

namespace facebook::react {

void NO_PROPS_NO_EVENTS_registerComponentDescriptorsFromCodegen(
  std::shared_ptr<const ComponentDescriptorProviderRegistry> registry) {
registry->add(concreteComponentDescriptorProvider<NoPropsNoEventsComponentComponentDescriptor>());
}

} // namespace facebook::react
",
}
`;

exports[`GenerateComponentDescriptorCpp can generate fixture OBJECT_PROPS 1`] = `
Map {
  "ComponentDescriptors.cpp" => "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateComponentDescriptorCpp.js
 */

#include <react/renderer/components/OBJECT_PROPS/ComponentDescriptors.h>
#include <react/renderer/core/ConcreteComponentDescriptor.h>
#include <react/renderer/componentregistry/ComponentDescriptorProviderRegistry.h>

namespace facebook::react {

void OBJECT_PROPS_registerComponentDescriptorsFromCodegen(
  std::shared_ptr<const ComponentDescriptorProviderRegistry> registry) {
registry->add(concreteComponentDescriptorProvider<ObjectPropsComponentDescriptor>());
}

} // namespace facebook::react
",
}
`;

exports[`GenerateComponentDescriptorCpp can generate fixture POINT_PROP 1`] = `
Map {
  "ComponentDescriptors.cpp" => "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateComponentDescriptorCpp.js
 */

#include <react/renderer/components/POINT_PROP/ComponentDescriptors.h>
#include <react/renderer/core/ConcreteComponentDescriptor.h>
#include <react/renderer/componentregistry/ComponentDescriptorProviderRegistry.h>

namespace facebook::react {

void POINT_PROP_registerComponentDescriptorsFromCodegen(
  std::shared_ptr<const ComponentDescriptorProviderRegistry> registry) {
registry->add(concreteComponentDescriptorProvider<PointPropNativeComponentComponentDescriptor>());
}

} // namespace facebook::react
",
}
`;

exports[`GenerateComponentDescriptorCpp can generate fixture STRING_ENUM_PROP 1`] = `
Map {
  "ComponentDescriptors.cpp" => "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateComponentDescriptorCpp.js
 */

#include <react/renderer/components/STRING_ENUM_PROP/ComponentDescriptors.h>
#include <react/renderer/core/ConcreteComponentDescriptor.h>
#include <react/renderer/componentregistry/ComponentDescriptorProviderRegistry.h>

namespace facebook::react {

void STRING_ENUM_PROP_registerComponentDescriptorsFromCodegen(
  std::shared_ptr<const ComponentDescriptorProviderRegistry> registry) {
registry->add(concreteComponentDescriptorProvider<StringEnumPropsNativeComponentComponentDescriptor>());
}

} // namespace facebook::react
",
}
`;

exports[`GenerateComponentDescriptorCpp can generate fixture STRING_PROP 1`] = `
Map {
  "ComponentDescriptors.cpp" => "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateComponentDescriptorCpp.js
 */

#include <react/renderer/components/STRING_PROP/ComponentDescriptors.h>
#include <react/renderer/core/ConcreteComponentDescriptor.h>
#include <react/renderer/componentregistry/ComponentDescriptorProviderRegistry.h>

namespace facebook::react {

void STRING_PROP_registerComponentDescriptorsFromCodegen(
  std::shared_ptr<const ComponentDescriptorProviderRegistry> registry) {
registry->add(concreteComponentDescriptorProvider<StringPropComponentComponentDescriptor>());
}

} // namespace facebook::react
",
}
`;

exports[`GenerateComponentDescriptorCpp can generate fixture TWO_COMPONENTS_DIFFERENT_FILES 1`] = `
Map {
  "ComponentDescriptors.cpp" => "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateComponentDescriptorCpp.js
 */

#include <react/renderer/components/TWO_COMPONENTS_DIFFERENT_FILES/ComponentDescriptors.h>
#include <react/renderer/core/ConcreteComponentDescriptor.h>
#include <react/renderer/componentregistry/ComponentDescriptorProviderRegistry.h>

namespace facebook::react {

void TWO_COMPONENTS_DIFFERENT_FILES_registerComponentDescriptorsFromCodegen(
  std::shared_ptr<const ComponentDescriptorProviderRegistry> registry) {
registry->add(concreteComponentDescriptorProvider<MultiFile1NativeComponentComponentDescriptor>());
registry->add(concreteComponentDescriptorProvider<MultiFile2NativeComponentComponentDescriptor>());
}

} // namespace facebook::react
",
}
`;

exports[`GenerateComponentDescriptorCpp can generate fixture TWO_COMPONENTS_SAME_FILE 1`] = `
Map {
  "ComponentDescriptors.cpp" => "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateComponentDescriptorCpp.js
 */

#include <react/renderer/components/TWO_COMPONENTS_SAME_FILE/ComponentDescriptors.h>
#include <react/renderer/core/ConcreteComponentDescriptor.h>
#include <react/renderer/componentregistry/ComponentDescriptorProviderRegistry.h>

namespace facebook::react {

void TWO_COMPONENTS_SAME_FILE_registerComponentDescriptorsFromCodegen(
  std::shared_ptr<const ComponentDescriptorProviderRegistry> registry) {
registry->add(concreteComponentDescriptorProvider<MultiComponent1NativeComponentComponentDescriptor>());
registry->add(concreteComponentDescriptorProvider<MultiComponent2NativeComponentComponentDescriptor>());
}

} // namespace facebook::react
",
}
`;
